<resources>
    <string name="app_name">Registration Form</string>
    <string name="registration_form">Registration Form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="preferences">Preferences</string>
    <string name="share_about_yourself">Share about yourself</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
</resources>